--- a/index.html
+++ b/index.html
@@ -1,11 +1,134 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Mastering Software Development (Book website)</title>
-  </head>
-  <body>
-    <h1>Mastering Software Development (Book website)</h1>
-    <p>We'll add details soon. Please stay tuned!</p>
-  </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>The MSD Book :: Prof. Balwinder Sodhi, IIT Ropar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <style>
+        .top-section {
+            background: #fff2cc;
+        }
+
+        .maroon-text {
+            color: #a32019;
+        }
+
+        .dark-text {
+            color: #134f5c;
+        }
+
+        .light-card {
+            background: #d9ead3;
+            color: #134f5c;
+        }
+
+        .dark-card {
+            background: #134f5c;
+            color: white;
+        }
+
+        .bottom-section {
+            background: #fff2cc;
+        }
+    </style>
+</head>
+
+<body>
+    <!-- Top Section -->
+    <div class="container-fluid p-0 top-section">
+        <div class="card border-0 bg-transparent">
+            <div class="card-body">
+                <span class="fs-2 text-uppercase maroon-text">Mastering Software Development &mdash;</span>
+                <span class="fs-3 dark-text fst-italic">A Guide For Early Career Engineers</span><br />
+                <span class="fs-4 maroon-text">By Prof. Balwinder Sodhi, Dept. of CSE IIT Ropar (<a href="http://cse.iitrpr.ac.in/sodhi/">Website</a>)</span>
+            </div>
+        </div>
+    </div>
+    <!-- Main Content -->
+    <div class="container-fluid p-0">
+        <div class="card-group">
+            <div class="card border-0 p-3 h-100">
+                <h4>About the book</h4>
+                <p>
+                    In the rapidly evolving world of technology, understanding how to build software is only
+                    half
+                    the battle - knowing why it's built that way is what sets a true engineer apart.
+                    Mastering Software Development is the definitive guide for early-career engineers who want
+                    to go
+                    beyond coding and understand the full lifecycle of modern software systems — from concept to
+                    deployment.</p>
+
+                Drawing from real-world practice, this book helps you:
+                <ul>
+                    <li>Grasp the <b>core foundations</b> of software design and architecture.</li>
+                    <li>Apply <b>user experience principles</b> that enhance usability and engagement.</li>
+                    <li>Master <b>modern architectural patterns</b> ─ from microservices to serverless.</li>
+                    <li>Understand <b>AI/ML and LLM-powered architectures</b> shaping today's systems.</li>
+                    <li>Implement <b>testing, CI/CD, and observability</b> to ensure quality and resilience.
+                    </li>
+                    <li>Integrate everything into a <b>cohesive, real-world system</b> in the final capstone
+                        project.</li>
+                </ul>
+                <div class="alert bg-light">
+                    <span class="fs-5">Key feature:</span> This book is interspersed with QR codes that takes
+                    you straight into a contextualized conversation with AI such as ChatGPT.
+                </div>
+            </div>
+            <div class="card border-0 p-3 h-100">
+                <h4>Why Software Fundamentals Still Matter in the Age of AI</h4>
+                <p>Even with "superhuman coders," human expertise stays essential.</p>
+                <ul>
+                    <li><b>Verification:</b> Safety-critical software can’t be trusted without human
+                        understanding.
+                    </li>
+                    <li><b>Resilience:</b> Losing core CS knowledge creates systemic dependence on AI.
+                    </li>
+                    <li><b>Oversight:</b> Real software audit requires deep architectural and
+                        engineering
+                        insight.
+                    </li>
+                    <li><b>Education:</b> We still need theory, systems thinking, and the ability to
+                        challenge
+                        AI
+                        output.</li>
+                </ul>
+                <p>
+                    AI won't make software engineers obsolete - it makes <b>informed engineers
+                        indispensable.</b>
+                    <i>This book helps you stay in that role.</i>
+                </p>
+
+                <h5 class="card-title">Presentation Slides</h5>
+                <ol>
+                    <li><a href="pdf/1.Foundations-of-Software-Development.pdf">Chapter 1 – Foundations of Software Development</a></li>
+                    <li><a href="pdf/2.Basics-of-UX-UE.pdf">Chapter 2 – Basics of UX/UE</a></li>
+                    <li><a href="pdf/3.Fundamentals-of-Software-Design.pdf">Chapter 3 – Fundamentals of Software Design</a></li>
+                    <li><a href="pdf/4.Architectural-Design.pdf">Chapter 3 – Architectural Design</a></li>
+                    <li><a href="pdf/5.Architecting-Software-in-the-Era-of-AI-ML.pdf">Chapter 3 – Architecting software in the era of AI/ML</a></li>
+                    <li><a href="pdf/6.LLM-powered-and-Agentic-Applications.pdf">Chapter 6 – LLM-powered and Agentic Applications</a></li>
+                    <li><a href="pdf/7.Database-Design-and-Management.pdf">Chapter 7 – Database Design and Management</a></li>
+                    <li><a href="pdf/8.Software-Testing-and-Quality-Assurance.pdf">Chapter 8 – Software Testing and Quality Assurance</a></li>
+                    <li><a href="pdf/9.Deployment-and-Maintenance.pdf">Chapter 9 – Deployment and Maintenance</a></li>
+                </ol>
+            </div>
+            <div class="card border-0 p-3 h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Where to Buy</h5>
+                    <ul>
+                        <li><a href="https://www.amazon.in/dp/9347472751">Amazon</a></li>
+                        <li><a href="https://www.flipkart.com/product/p/itme?pid=9789347472756">Flipkart</a></li>
+                        <li><a href="https://store.whitefalconpublishing.com/collections/latest-books/products/mastering-software-development-a-guide-for-early-career-software-engineers">Direct from Publisher</a></li>
+                    </ul>
+                    <img src="images/image1.png" alt="Mastering Software Development Book Cover"
+                            class="img-fluid p-3" style="height: 400px;"/>
+                </div>
+            </div>
+        </div>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
