--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </ul>
                 <div class="alert bg-light">
                     <span class="fs-5">Key feature:</span> This book is interspersed with QR codes that takes
-                    you straight into a contextualized conversation with AI such as ChatGPT.
+                    you into a deeper dive into the topic in context.
                 </div>
             </div>
             <div class="card border-0 p-3 h-100">
