--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="card-body">
                 <span class="fs-2 text-uppercase maroon-text">Mastering Software Development &mdash;</span>
                 <span class="fs-3 dark-text fst-italic">A Guide For Early Career Engineers</span><br />
-                <span class="fs-4 maroon-text">By Prof. Balwinder Sodhi, Dept. of CSE IIT Ropar (<a href="http://cse.iitrpr.ac.in/sodhi/">Website</a>)</span>
+                <span class="fs-4 maroon-text">By Prof. Balwinder Sodhi, Dept. of CSE IIT Ropar (<a href="http://cse.iitrpr.ac.in/sodhi/" target="_blank">Website</a>)</span>
             </div>
         </div>
     </div>
@@ -102,24 +102,24 @@
 
                 <h5 class="card-title">Presentation Slides</h5>
                 <ol>
-                    <li><a href="pdf/1.Foundations-of-Software-Development.pdf">Chapter 1 – Foundations of Software Development</a></li>
-                    <li><a href="pdf/2.Basics-of-UX-UE.pdf">Chapter 2 – Basics of UX/UE</a></li>
-                    <li><a href="pdf/3.Fundamentals-of-Software-Design.pdf">Chapter 3 – Fundamentals of Software Design</a></li>
-                    <li><a href="pdf/4.Architectural-Design.pdf">Chapter 3 – Architectural Design</a></li>
-                    <li><a href="pdf/5.Architecting-Software-in-the-Era-of-AI-ML.pdf">Chapter 3 – Architecting software in the era of AI/ML</a></li>
-                    <li><a href="pdf/6.LLM-powered-and-Agentic-Applications.pdf">Chapter 6 – LLM-powered and Agentic Applications</a></li>
-                    <li><a href="pdf/7.Database-Design-and-Management.pdf">Chapter 7 – Database Design and Management</a></li>
-                    <li><a href="pdf/8.Software-Testing-and-Quality-Assurance.pdf">Chapter 8 – Software Testing and Quality Assurance</a></li>
-                    <li><a href="pdf/9.Deployment-and-Maintenance.pdf">Chapter 9 – Deployment and Maintenance</a></li>
+                    <li><a href="pdf/1.Foundations-of-Software-Development.pdf" target="_blank">Chapter 1 – Foundations of Software Development</a></li>
+                    <li><a href="pdf/2.Basics-of-UX-UE.pdf" target="_blank">Chapter 2 – Basics of UX/UE</a></li>
+                    <li><a href="pdf/3.Fundamentals-of-Software-Design.pdf" target="_blank">Chapter 3 – Fundamentals of Software Design</a></li>
+                    <li><a href="pdf/4.Architectural-Design.pdf" target="_blank">Chapter 3 – Architectural Design</a></li>
+                    <li><a href="pdf/5.Architecting-Software-in-the-Era-of-AI-ML.pdf" target="_blank">Chapter 3 – Architecting software in the era of AI/ML</a></li>
+                    <li><a href="pdf/6.LLM-powered-and-Agentic-Applications.pdf" target="_blank">Chapter 6 – LLM-powered and Agentic Applications</a></li>
+                    <li><a href="pdf/7.Database-Design-and-Management.pdf" target="_blank">Chapter 7 – Database Design and Management</a></li>
+                    <li><a href="pdf/8.Software-Testing-and-Quality-Assurance.pdf" target="_blank">Chapter 8 – Software Testing and Quality Assurance</a></li>
+                    <li><a href="pdf/9.Deployment-and-Maintenance.pdf" target="_blank">Chapter 9 – Deployment and Maintenance</a></li>
                 </ol>
             </div>
             <div class="card border-0 p-3 h-100">
                 <div class="card-body">
                     <h5 class="card-title">Where to Buy</h5>
                     <ul>
-                        <li><a href="https://www.amazon.in/dp/9347472751">Amazon</a></li>
-                        <li><a href="https://www.flipkart.com/product/p/itme?pid=9789347472756">Flipkart</a></li>
-                        <li><a href="https://store.whitefalconpublishing.com/collections/latest-books/products/mastering-software-development-a-guide-for-early-career-software-engineers">Direct from Publisher</a></li>
+                        <li><a href="https://www.amazon.in/dp/9347472751" target="_blank">Amazon</a></li>
+                        <li><a href="https://www.flipkart.com/product/p/itme?pid=9789347472756" target="_blank">Flipkart</a></li>
+                        <li><a href="https://store.whitefalconpublishing.com/collections/latest-books/products/mastering-software-development-a-guide-for-early-career-software-engineers" target="_blank">Direct from Publisher</a></li>
                     </ul>
                     <img src="images/image1.png" alt="Mastering Software Development Book Cover"
                             class="img-fluid p-3" style="height: 400px;"/>
