--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
                     </ul>
                     <img src="images/image1.png" alt="Mastering Software Development Book Cover"
                             class="img-fluid p-3" style="height: 400px;"/>
+                    <p>
+                        <a href="pdf/detailed-toc.pdf" target="_blank">Detailed Table of Contents (pdf)</a>
+                    </p>
                 </div>
             </div>
         </div>
