--- a/aip/a9.html
+++ b/aip/a9.html
@@ -1,1 +1,29 @@
-This is a test!
+<html>
+  <head><title>MSD Book</title></head>
+  <body>
+    <ol>
+  <li><a href="./acn-azn-example.html">acn-azn-example.html</a></li>
+  <li><a href="./adapter-pattern.html">adapter-pattern.html</a></li>
+  <li><a href="./command-pattern.html">command-pattern.html</a></li>
+  <li><a href="./configure-tls.html">configure-tls.html</a></li>
+  <li><a href="./dao-example.html">dao-example.html</a></li>
+  <li><a href="./dip-example.html">dip-example.html</a></li>
+  <li><a href="./encapsulation.html">encapsulation.html</a></li>
+  <li><a href="./explore-parallelization.html">explore-parallelization.html</a></li>
+  <li><a href="./factory-method.html">factory-method.html</a></li>
+  <li><a href="./generate-sample-test-plan.html">generate-sample-test-plan.html</a></li>
+  <li><a href="./index.html">index.html</a></li>
+  <li><a href="./isp-example.html">isp-example.html</a></li>
+  <li><a href="./lsp-example.html">lsp-example.html</a></li>
+  <li><a href="./ocp-example.html">ocp-example.html</a></li>
+  <li><a href="./observer-pattern.html">observer-pattern.html</a></li>
+  <li><a href="./perf-test-tools.html">perf-test-tools.html</a></li>
+  <li><a href="./proxy-pattern.html">proxy-pattern.html</a></li>
+  <li><a href="./quality-attributes.html">quality-attributes.html</a></li>
+  <li><a href="./srp-example.html">srp-example.html</a></li>
+  <li><a href="./srs-hld-lld-testcases.html">srs-hld-lld-testcases.html</a></li>
+  <li><a href="./strategy-pattern.html">strategy-pattern.html</a></li>
+  <li><a href="./visitor-pattern.html">visitor-pattern.html</a></li>
+</ol>
+  </body>
+</html>
